[metadata]
name = multi_job
version = 0.10.15

description = Job runner for multifaceted projects
url = https://github.com/JoelLefkowitz/yummy-cereal

license_file = LICENSE.md
long-description = file: README.md
long_description_content_type = text/markdown

author = Joel Lefkowitz
author-email = joellefkowitz@hotmail.com

keywords = 
    subprocess
    pipe
    stdin
    stdout
    stderr

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[portfolio]
project_type = Pypi package
status = In development
homepage = https://yummy-cereal.readthedocs.io

languages = 
    Python

paradigms = 
    Object oriented programming

[options]
packages = find:
include_package_data = True
python_requires = >=3.6
setup_requires = setuptools

[options.packages.find]
exclude =
    *.tests
    *.tests.*
    tests.*
    tests
    